# rokey_proj_02

./: .gitignore  LICENSE  README.md  데모.md
docs/: 2026-07-08-servo-tuning-실기테스트-발견사항.md  2026-07-11-칼만필터-튜닝-도구-사용법.md  6.1 호출 흐름 상세.md  실제 구현한 코드.md  실행방식.md  움직이는_물체_강건성_제안.md  전체 계획.md  전체 계획중 구현하기로 한것.md  초기 설계 시퀀스 다이어그램.md  파이프라인 점검.md
docs/superpowers/plans/: 2026-07-05-teammate2-vision-calculate.md  2026-07-06-handover-ui-rclpy.md  2026-07-07-handover-approach-cleanup.md  2026-07-07-remove-rt-control.md  2026-07-07-speedl-stream-probe.md
docs/superpowers/specs/: 2026-07-05-teammate2-vision-calculate-design.md  2026-07-06-handover-ui-rclpy-design.md  2026-07-07-handover-approach-movel-design.md  2026-07-07-remove-rt-control-design.md  2026-07-07-speedl-stream-probe-design.md  2026-07-08-servo-tuning-real-hardware-test-design.md
model/: args.yaml  data_test_test.yaml  results.csv
src/handover_interfaces/: CMakeLists.txt  package.xml
src/handover_interfaces/action/: RobotTask.action
src/handover_interfaces/msg/: Detection2D.msg  DetectionArray.msg  GripperState.msg  HandTrack.msg  ToolTrack.msg  VisionTiming.msg
src/handover_interfaces/srv/: SetVisionMode.srv
src/handover_ui/: package.xml  requirements.txt  setup.cfg  setup.py
src/handover_ui/handover_ui/: main.py  main_window.py  ros_client.py
src/handover_ui/launch/: handover_ui.launch.py
src/handover_ui/test/: test_main_window.py  test_ros_client.py
src/operator_gui/: package.xml  setup.cfg  setup.py
src/operator_gui/launch/: operator_gui.launch.py
src/operator_gui/operator_gui/: main.py  main_window.py  ros_client.py
src/operator_gui/test/: conftest.py  test_main_window.py  test_ros_client.py
src/robot_control/: package.xml  requirements.txt  setup.py
src/robot_control/config/: robot_control_calibration_params.yaml  robot_control_local_params.yaml  robot_control_params.yaml
src/robot_control/launch/: robot_control.launch.py
src/robot_control/robot_control/: doosan_driver.py  drfl_contact_monitor.py  drfl_force_monitor.py  hand_servo_loop.py  kalman.py  rg2_client.py  robot_control_node.py  safety_monitor.py  servo_loop.py  speedl_watchdog.py  task_executor.py
src/robot_control/robot_control/tools/: kalman_replay.py  probe_speedl_stream.py  simulate_conveyor.py  tool_track_logger.py
src/robot_control/test/: test_doosan_driver.py  test_drfl_contact_monitor.py  test_drfl_force_monitor.py  test_hand_servo_loop.py  test_kalman.py  test_kalman_replay.py  test_probe_speedl_stream.py  test_rg2_client.py  test_robot_control_node.py  test_servo_loop.py  test_simulate_conveyor.py  test_speedl_watchdog.py  test_tool_track_logger.py
src/stt_node/: package.xml  requirements.txt  setup.py
src/stt_node/launch/: stt_node.launch.py
src/stt_node/stt_node/: mic_controller.py  stt_node.py  wakeup_word.py
src/stt_node/test/: test_stt_node.py  test_wakeup_word.py
src/task_manager/: package.xml  setup.py
src/task_manager/config/: task_manager_params.yaml
src/task_manager/launch/: handover_system.launch.py  task_manager.launch.py
src/task_manager/task_manager/: action_coordinator.py  command_parser.py  safety_recovery.py  task_flow.py  task_manager_node.py  task_models.py
src/task_manager/test/: test_command_parser.py  test_task_manager_node.py
src/vision_node/: package.xml  requirements.txt  setup.py
src/vision_node/docker/: Dockerfile  hand_track_node.py
src/vision_node/launch/: vision_node.launch.py
src/vision_node/resource/: T_gripper2camera.npy
src/vision_node/test/: test_grasp_geometry.py  test_hand_tracking.py  test_tool_detection_node.py  test_tracking.py  test_vision_node.py
src/vision_node/vision_node/: grasp_geometry.py  hand_tracking.py  tool_detection_node.py  tracking.py  vision_node.py
src/vision_node/vision_node/tools/: fake_detection_publisher.py
