<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_node</name>
  <version>0.0.1</version>
  <description>RealSense 저해상도·고프레임 공구/손 추적 노드</description>
  <maintainer email="hwangjeongui01@gmail.com">hwangjeongui</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>
  <depend>handover_interfaces</depend>
  <exec_depend>realsense2_camera</exec_depend>
  <!-- mediapipe는 rosdep 대상이 아니므로 pip로 별도 설치: requirements.txt 참고 -->

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
